doc: fix rare case of misaligned columns
By using the same unit for the offset of the main column as used for the
left column width, we ensure that browsers render the columns
conistently.

Ref: https://github.com/nodejs/help/issues/32

PR-URL: https://github.com/nodejs/node/pull/3948

--- a/doc/api_assets/style.css
+++ b/doc/api_assets/style.css
@@ -356,7 +356,7 @@ span.type {
 
 #column1.interior {
   width: 702px;
-  border-left: 13em solid #f2f5f0;
+  border-left: 234px solid #f2f5f0;
   padding-left: 2.0em;
 }
 
